--- a/paper/agda.tex
+++ b/paper/agda.tex
@@ -2,10 +2,10 @@
 \label{sec:agda}
 
 In this section we describe the formalisation of \LCP in Agda. We present in
-detail only the key parts of the code, including the representation of types,
+detail only some key parts of the code including the representation of types and
 processes, the definition of the operational semantics and the statement of the
-main results. The interested reader may refer to the public repository for the
-complete source code.
+main results. The interested reader may find the complete source code in the
+public repository.
 
 \input{Type}
 \input{Context}
