--- a/paper/main.tex
+++ b/paper/main.tex
@@ -62,6 +62,7 @@
 \newunicodechar{≪}{\ensuremath\ll}
 \newunicodechar{∋}{\ensuremath\ni}
 \newunicodechar{⊳}{\ensuremath\vartriangleright}
+\newunicodechar{ℓ}{\ensuremath\ell}
 % \newunicodechar{•}{\bullet}
 
 %%%%%=============================================================================%%%%
