--- a/paper/Congruence.lagda.tex
+++ b/paper/Congruence.lagda.tex
@@ -38,9 +38,10 @@ The constructor \AgdaInductiveConstructor{s-comm} models the commutativity
 property of parallel composition. We use \AgdaFunction{+-comm} to compute the
 proof of the splitting $\Splitting\ContextC{\Context_2}{\Context_1}$ from $p$.
 %
-Notice that this constructor also makes key use of the implicit rewriting rule
-\AgdaFunction{dual-inv} described in \Cref{sec:type-agda}. Indeed $P$ and $Q$
-have type $\AgdaDatatype{Proc}~(A~\AgdaInductiveConstructor{∷}~\Context_1)$ and
+Notice that \AgdaInductiveConstructor{s-comm} makes key use of the implicit
+rewriting rule \AgdaFunction{dual-inv} described in \Cref{sec:type-agda}. Indeed
+$P$ and $Q$ have type
+$\AgdaDatatype{Proc}~(A~\AgdaInductiveConstructor{∷}~\Context_1)$ and
 $\AgdaDatatype{Proc}~(\AgdaFunction{dual}~A~\AgdaInductiveConstructor{∷}~\Context_2)$,
 respectively, but the \AgdaInductiveConstructor{cut} on the r.h.s. of
 \AgdaInductiveConstructor{⊒} expects $P$ to have type
@@ -90,7 +91,7 @@ elements:
     We enforce the side condition $x \ne y$ of \SWait (which we left implicit in
     \Cref{tab:semantics}) imposing that the type $A$ in front of
     $A~\AgdaInductiveConstructor{∷}~\Context_1$ necessarily comes from the right
-    component of the splitting $[\Bot] + A~\AgdaInductiveConstructor{∷}~\Delta$
+    partition of the splitting $[\Bot] + A~\AgdaInductiveConstructor{∷}~\Delta$
     through the use of \AgdaInductiveConstructor{>}.
 \end{enumerate}
 
@@ -231,9 +232,9 @@ $(\AgdaInductiveConstructor{>}~r)$.
 \end{code}
 
 Finally, in \Cref{sec:semantics} we have colloquially defined $\pcong$ as a
-``\emph{pre-congruence}'', implying that it is reflexive, transitive relation
-and that it is is preserved by some forms of calculus. In the formalisation we
-have to be precise and we introduce specific rules:
+``pre-congruence'', implying that it is a reflexive, transitive relation
+preserved by some forms of the calculus. In the formalisation we have to be
+precise and we introduce specific rules:
 
 \begin{code}
   s-refl  : ∀{P} → P ⊒ P
@@ -248,10 +249,11 @@ limited form of pre-congruence turns out to be sufficient for the development
 that follows.
 \end{AgdaAlign}
 
-We concede that the definition of these pre-congruence rules (including those
+We concede that the implementation of the pre-congruence rules (including those
 not discussed here) can be difficult to decipher. In part, this is due to the
-fact that splitting proofs are manifest and no longer hidden within separating
-conjunctions as we have done in \Cref{sec:process-agda} because we need them to
-enforce the side conditions of the rules in \Cref{tab:semantics}. Also, using an
-intrinsically-typed representation of processes, pre-congruence and reduction
-rules incorporate the proof that they preserve typing.
+fact that splitting proofs are manifest and no longer hidden by separating
+conjunctions (as in \Cref{sec:process-agda}) because we need them to enforce the
+side conditions of the rules in \Cref{tab:semantics}. We should also bear in
+mind that, using an intrinsically-typed representation of processes,
+pre-congruence and reduction rules (which we describe next) incorporate the
+proof that they preserve typing.
